[workspace]
members = ["mpscbuf", "protocol", "agent"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["manytrace contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bitcode = "0.6.6"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
divan = "0.1.21"
eyre = "0.6"
governor = "0.7"
hdrhistogram = "7.5"
libc = "0.2"
nix = { version = "0.30", features = ["mman", "fs", "event", "socket", "uio"] }
parking_lot = "0.12"
rkyv = { version = "0.8.10", features = ["alloc", "bytecheck"] }
rstest = "0.23"
tempfile = "3.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.bench]
opt-level = 3
debug = true
lto = "fat"
codegen-units = 1
