[workspace]
members = ["mpscbuf", "protocol", "agent", "tracing-manytrace", "chrome-trace-format", "perfetto-format", "manytrace", "bpf", "interned-symbolizer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["manytrace contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arc-swap = "1.7"
bitcode = "0.6.6"
blazesym = "0.2.0-rc.3"
bon = "3.6"
bytemuck = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
ctrlc = "3.4"
divan = "0.1.21"
eyre = "0.6"
governor = "0.7"
hdrhistogram = "7.5"
humantime = "2.1"
libbpf-cargo = "0.25"
libbpf-rs = "0.25"
libbpf-sys = "1.5"
libc = "0.2"
nix = { version = "0.30", features = ["mman", "fs", "event", "socket", "uio"] }
parking_lot = "0.12"
plain = "0.2"
rkyv = { version = "0.8.10", features = ["alloc", "bytecheck"] }
rstest = "0.23"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.0"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }
prost = "0.13"
prost-build = "0.13"

[profile.dev]
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
lto = "fat"
codegen-units = 1
