[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mpscbuf = { path = "../mpscbuf" }
protocol = { path = "../protocol" }
arc-swap.workspace = true
nix = { workspace = true, features = ["socket", "uio", "event"] }
rkyv.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true