[package]
name = "bpf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
libbpf-cargo = { workspace = true }
vmlinux = { workspace = true }

[dependencies]
bon = { workspace = true }
eyre = { workspace = true }
libbpf-rs = { workspace = true }
libbpf-sys = { workspace = true }
libc = { workspace = true }
ouroboros = "0.18"
plain = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
protocol = { path = "../protocol" }

[dev-dependencies]
ctrlc = { workspace = true }
protocol = { path = "../protocol" }

[[example]]
name = "threadtrack"
path = "examples/threadtrack.rs"

[[example]]
name = "cpuutil"
path = "examples/cpuutil.rs"
