[package]
name = "manytrace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "manytrace"
path = "src/bin/manytrace.rs"

[dependencies]
agent = { path = "../agent" }
protocol = { path = "../protocol" }
chrome-trace-format = { path = "../chrome-trace-format" }
bpf = { path = "../bpf" }
perfetto-format = { path = "../perfetto-format" }
clap.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv.workspace = true
toml = "0.8"
ctrlc = "3.4"
humantime.workspace = true

[build-dependencies]
grev = "0.1"

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
prost.workspace = true
nix = { version = "0.30", features = ["signal", "process"] }
serial_test = "3.0"