[package]
name = "tracing-manytrace"
version = "0.1.0"
edition = "2021"

[dependencies]
agent = { path = "../agent" }
protocol = { path = "../protocol" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }