[package]
name = "tracing-manytrace"
version = "0.1.0"
edition = "2021"

[dependencies]
agent = { path = "../agent" }
protocol = { path = "../protocol" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
thread_local = "1.1"

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
divan = { workspace = true }

[[bench]]
name = "on_event"
harness = false