[package]
name = "usertrace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "usertrace"
path = "src/bin/usertrace.rs"

[[bin]]
name = "bpftrace"
path = "src/bin/bpftrace.rs"

[dependencies]
agent = { path = "../agent" }
protocol = { path = "../protocol" }
chrome-trace-format = { path = "../chrome-trace-format" }
bpf = { path = "../bpf" }
perfetto-format = { path = "../perfetto-format" }
clap.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv.workspace = true